--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,13 +65,19 @@ jobs:
           ACCESS_TOKEN=$(jq -r .access_token < token.json)
 
           GRADLE_BUILD_STATUS="${{ needs.build.result }}"
+          SONARQUBE_STATUS="${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
+
+          echo "Build result: $GRADLE_BUILD_STATUS"
+          echo "SonarQube result: $SONARQUBE_STATUS"
+
+          GRADLE_BUILD_STATUS="${{ needs.build.result }}"
 
           echo "build: $GRADLE_BUILD_STATUS"
 
-          if [[ "$GRADLE_BUILD_STATUS" == "success" ]]; then
-            STATUS="the SonarQube result succeeded"
+          if [[ "$GRADLE_BUILD_STATUS" == "success" && "$SONARQUBE_STATUS" == "OK" ]]; then
+            STATUS="The SonarQube analysis passed successfully."
           else
-            STATUS="the SonarQube result failed"
+            STATUS="The SonarQube analysis failed or quality gate not passed."
           fi
 
           IFS=',' read -ra RECIPIENTS <<< "$EMAIL_RECIPIENTS"
@@ -83,10 +89,10 @@ jobs:
             -H "Content-Type: application/json" \
             -d '{
               "message": {
-                "subject": "GitHub Action Notification SonarQube Result",
+                "subject": "GitHub Action Notification - SonarQube Result",
                 "body": {
                   "contentType": "Text",
-                  "content": "The GitHub Action PROD workflow has '"${STATUS}"'."
+                  "content": "The GitHub Action workflow has completed. Build status: '"${GRADLE_BUILD_STATUS}"'. SonarQube status: '"${STATUS}"'."
                 },
                 "toRecipients": ['"$RECIPIENTS_JSON"']
                     }
