--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
   workflow_dispatch: null
 jobs:
-  build:
+  Gradle_Build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -40,9 +40,9 @@ jobs:
       - name: Here is SonarQube Quality Gate Status value...
         run: echo "The Quality Gate status is ${{
           steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
-  send_email_notification:
+  Send_Email_Notification:
     needs:
-      - build
+      - Gradle_Build
     runs-on: ubuntu-latest
     if: always()
     steps:
@@ -64,15 +64,11 @@ jobs:
 
           ACCESS_TOKEN=$(jq -r .access_token < token.json)
 
-          GRADLE_BUILD_STATUS="${{ needs.build.result }}"
+          GRADLE_BUILD_STATUS="${{ needs.Gradle_Build.result }}"
           SONARQUBE_STATUS="${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
 
-          echo "Build result: $GRADLE_BUILD_STATUS"
-          echo "SonarQube result: $SONARQUBE_STATUS"
-
-          GRADLE_BUILD_STATUS="${{ needs.build.result }}"
-
-          echo "build: $GRADLE_BUILD_STATUS"
+          echo "Build Result: $GRADLE_BUILD_STATUS"
+          echo "SonarQube Result: $SONARQUBE_STATUS"
 
           if [[ "$GRADLE_BUILD_STATUS" == "success" && "$SONARQUBE_STATUS" == "OK" ]]; then
             STATUS="The SonarQube analysis passed successfully."
@@ -92,7 +88,7 @@ jobs:
                 "subject": "GitHub Action Notification - SonarQube Result",
                 "body": {
                   "contentType": "Text",
-                  "content": "The GitHub Action workflow has completed. Build status: '"${GRADLE_BUILD_STATUS}"'. SonarQube status: '"${STATUS}"'."
+                  "content": "The GitHub Action workflow has completed. Build status: '"${GRADLE_BUILD_STATUS}"'. SonarQube status: '"${STATUS}"'"
                 },
                 "toRecipients": ['"$RECIPIENTS_JSON"']
                     }
