--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
----
 name: CI/CD workflow for Gradle Build and Sonar Code scan
 on:
   push:
@@ -10,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       sonar_status: ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}
+      sonar_analysis_id: ${{ steps.sonarqube-scan.outputs.sonar_analysis_id }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -23,6 +23,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build --scan
       - name: SonarQube scan
+        id: sonarqube-scan
         uses: sonarsource/sonarqube-scan-action@master
         with:
           projectBaseDir: .
@@ -49,6 +50,17 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     steps:
+      - name: Fetch SonarQube Analysis Results
+        id: fetch-sonarqube-results
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: |
+          ANALYSIS_ID=${{ needs.build.outputs.sonar_analysis_id }}
+          curl -u $SONAR_TOKEN: -s "$SONAR_HOST_URL/api/qualitygates/project_status?analysisId=$ANALYSIS_ID" -o sonar_results.json
+          SONAR_RESULTS=$(jq -r .projectStatus.status < sonar_results.json)
+          echo "SonarQube Results: $SONAR_RESULTS"
+          echo "SONAR_RESULTS=$SONAR_RESULTS" >> $GITHUB_ENV
       - name: Send email via Microsoft Graph
         env:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -56,7 +68,8 @@ jobs:
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           EMAIL_RECIPIENTS: vari@zuralabs.com
           EMAIL_FROM: vari@zuralabs.com
-        run: >
+          SONAR_RESULTS: ${{ env.SONAR_RESULTS }}
+        run: |
           curl -X POST "https://login.microsoftonline.com/$AZURE_TENANT_ID/oauth2/v2.0/token" \
             -F grant_type=client_credentials \
             -F client_id="$AZURE_CLIENT_ID" \
@@ -70,7 +83,6 @@ jobs:
           SONARQUBE_STATUS="${{ needs.build.outputs.sonar_status }}"
 
           echo "Build result: $GRADLE_BUILD_STATUS"
-
           echo "SonarQube result: $SONARQUBE_STATUS"
 
           if [[ "$GRADLE_BUILD_STATUS" == "success" && "$SONARQUBE_STATUS" == "PASSED" ]]; then
@@ -91,7 +103,7 @@ jobs:
                 "subject": "GitHub Action Notification - SonarQube Result",
                 "body": {
                   "contentType": "Text",
-                  "content": "The GitHub Action workflow has completed. \n\nBuild status: '"$GRADLE_BUILD_STATUS"'. \n\nSonarQube status: '"$STATUS"'"
+                  "content": "The GitHub Action workflow has completed. \n\nBuild status: '"$GRADLE_BUILD_STATUS"'. \n\nSonarQube status: '"$STATUS"' \n\nSonarQube Results: '"$SONAR_RESULTS"'"
                 },
                 "toRecipients": ['"$RECIPIENTS_JSON"']
               }
